--- a/OpenGLV1.vcxproj.filters
+++ b/OpenGLV1.vcxproj.filters
@@ -30,4 +30,9 @@
       <Filter>Source Files\Shaders</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Log.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
