Reorganising file structure

--- a/OpenGLV1.vcxproj
+++ b/OpenGLV1.vcxproj
@@ -167,6 +167,7 @@ XCOPY "$(SolutionDir)"\Common\lib\*.DLL "$(TargetDir)" /D /K /Y
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Common\MathsFuncs.cpp" />
     <ClCompile Include="TestGL.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -184,6 +185,7 @@ XCOPY "$(SolutionDir)"\Common\lib\*.DLL "$(TargetDir)" /D /K /Y
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Common\MathsFuncs.h" />
     <ClInclude Include="Log.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
